--- a/android-crmtab/app/src/main/res/layout/item_calllog_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/item_calllog_fragment.xml
@@ -6,6 +6,8 @@
     android:layout_height="40dp"
     android:layout_width="match_parent"
     card_view:cardCornerRadius="15dp"
+    android:layout_marginTop="10dp"
+    android:elevation="7sp"
     card_view:cardBackgroundColor="#ffffff">
 
 
