--- a/android-crmtab/app/src/main/res/layout/activity_login.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="fr.pds.isintheair.crmtab.common.view.activity.LoginActivity"
+    tools:context=".common.view.activity.LoginActivity"
     android:background="#dfdfdf"
     android:weightSum="1">
 
