--- a/android-crmtab/app/src/main/res/layout/activity_login.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_login.xml
@@ -1,7 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LogincoordinatorLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -18,7 +28,6 @@
         android:src="@drawable/logo" />
 
     <TextView
-        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
@@ -28,8 +37,17 @@
         android:typeface="sans"
         android:textColor="#134b01" />
 
+
+    <RelativeLayout
+        style="@style/GenericProgressBackground"
+        android:id="@+id/loadingPanel"
+        >
+        <ProgressBar
+            style="@style/GenericProgressIndicator"/>
+    </RelativeLayout>
+
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/loginemail"
         android:layout_marginTop="50dp"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -40,7 +58,7 @@
         />
 
     <EditText
-        android:id="@+id/txtMdp"
+        android:id="@+id/loginpassword"
         android:layout_marginTop="20dp"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -49,13 +67,6 @@
         android:ems="10"
         />
 
-    <RelativeLayout
-        style="@style/GenericProgressBackground"
-        android:id="@+id/loadingPanel"
-        >
-        <ProgressBar
-            style="@style/GenericProgressIndicator"/>
-    </RelativeLayout>
 
     <Button
         android:id="@+id/btnSuivant"
@@ -68,3 +79,4 @@
 
 
 </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
