--- a/android-crmtab/app/src/main/res/values/styles.xml
+++ b/android-crmtab/app/src/main/res/values/styles.xml
@@ -36,12 +36,13 @@
     <style name="GenericProgressBackground" parent="android:Theme">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
-        <item name="android:background">#DD111111</item>
+        <item name="android:background">#dfdfdf</item>
         <item name="android:gravity">center</item>
     </style>
-    <style name="GenericProgressIndicator" parent="@android:style/Widget.ProgressBar.Small">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+    <style name="GenericProgressIndicator"
+        parent="@android:style/Widget.ProgressBar.Small">
+        <item name="android:layout_width">100px</item>
+        <item name="android:layout_height">100px</item>
         <item name="android:indeterminate">true</item>
     </style>
 
