--- a/android-crmtab/app/src/main/res/layout/fragment_detail_hc.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_detail_hc.xml
@@ -43,7 +43,10 @@
         android:layout_marginTop="10dp"
         app:contentPaddingBottom="50dp"
         >
-
+    <ScrollView
+        android:id="@+id/detail_hc_fragment_scrollView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_marginLeft="20dp"
@@ -51,9 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -365,7 +366,7 @@
 
         </LinearLayout>
                 </LinearLayout>
-        </ScrollView>
+
         <LinearLayout
             android:layout_marginTop="@dimen/detail_hc_margin_top"
             android:orientation="vertical"
@@ -383,7 +384,7 @@
             </LinearLayout>
 
         </LinearLayout>
-
+    </ScrollView>
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
