renamed working package to mbalabascarin.uc.edit.crv resolved package name conflict in Manifest.xml

--- a/android-crmtab/app/src/main/res/layout/activity_crv_home.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_crv_home.xml
@@ -9,7 +9,7 @@
     tools:context=".crv.view.CrvHomeActivity">
 
     <fragment
-        android:name="fr.pds.isintheair.crmtab.crv.view.ClientListFragment"
+        android:name="fr.pds.isintheair.crmtab.mbalabascarin.uc.edit.crv.view.ClientListFragment"
         android:id="@+id/fragment_place"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
