--- a/android-crmtab/app/src/main/res/layout/activity_login.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_login.xml
@@ -63,6 +63,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:hint="password"
+        android:inputType="textPassword"
         android:layout_gravity="center_horizontal"
         android:ems="10"
         />
