--- a/android-crmtab/app/src/main/res/layout/activity_contact_detail.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_contact_detail.xml
@@ -46,7 +46,7 @@
 
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="wrap_content">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -56,8 +56,8 @@
 
                 <ImageView
                     android:id="@+id/sms_imageview"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_marginEnd="10dp"
                     android:clickable="true"
                     android:contentDescription="@string/activity_contact_detail_sms_content_description"
@@ -65,8 +65,8 @@
 
                 <ImageView
                     android:id="@+id/phone_imageview"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     android:layout_marginEnd="10dp"
                     android:clickable="true"
                     android:contentDescription="@string/activity_contact_detail_phone_content_description"
