--- a/android-crmtab/app/src/main/res/layout/activity_contact_detail.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_contact_detail.xml
@@ -33,9 +33,7 @@
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                />
-
+                app:layout_collapseMode="pin"/>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
@@ -79,10 +77,6 @@
                     android:textSize="20sp"/>
 
             </LinearLayout>
-
-
         </android.support.v7.widget.CardView>
-
     </android.support.v4.widget.NestedScrollView>
-
 </android.support.design.widget.CoordinatorLayout>
