--- a/android-crmtab/app/src/main/res/layout/content_main.xml
+++ b/android-crmtab/app/src/main/res/layout/content_main.xml
@@ -15,6 +15,7 @@
 
     <FrameLayout
         android:layout_gravity="center"
+        android:foregroundGravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -27,7 +28,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-
         >
         </FrameLayout>
     </FrameLayout>
