--- a/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -16,12 +17,8 @@
         android:gravity="center">
 
         <ScrollView
-
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            android:foregroundGravity="center">
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -66,7 +63,7 @@
                     android:textColor="#372c24"
                     android:text="@string/contact"/>
                 <EditText
-                    android:id="@+id/edittextcontatctname"
+                    android:id="@+id/edittextcontactname"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:background="#f3f3f3"
@@ -213,8 +210,7 @@
 
 
         </LinearLayout>
-
-</ScrollView>
+        </ScrollView>
     </android.support.v7.widget.CardView>
 
 
