US64: Minor bug fixes added offline mode to save report in cache added offline database

--- a/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
@@ -184,7 +184,7 @@
                                 android:layout_height="25dp"
                                 android:background="@drawable/call"
                                 android:id="@+id/btnCall"
-
+                                android:onClick="callContact"
                                 android:layout_below="@+id/txtContact"
                                 android:layout_toRightOf="@id/btnSms"/>
                             <Button
