--- a/android-crmtab/app/src/main/res/layout/activity_call.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_call.xml
@@ -6,6 +6,13 @@
               android:orientation="vertical">
 
     <TextView
+        android:id="@+id/timer_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/phone_state_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
