--- a/android-crmtab/app/src/main/res/layout/activity_call.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_call.xml
@@ -9,20 +9,23 @@
         android:id="@+id/timer_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:visibility="gone"/>
+        android:layout_marginBottom="15dp"
+        android:text="TIMER"
+        android:textSize="25sp"
+        android:visibility="visible"/>
 
     <TextView
         android:id="@+id/phone_state_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:textSize="15sp"/>
+        android:layout_marginBottom="15dp"
+        android:text="State"
+        android:textSize="20sp"/>
 
     <ImageView
         android:id="@+id/phone_imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:src="@drawable/phone_logo_red"/>
 
 </LinearLayout>
