--- a/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
+++ b/android-crmtab/app/src/main/res/layout/log_informations_fragment.xml
@@ -48,7 +48,7 @@
 
             <LinearLayout android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginTop="30dp"
                 android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:layout_marginRight="@dimen/activity_horizontal_margin"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -139,7 +139,8 @@
                 <TextView android:layout_width="fill_parent"
                     android:layout_height="match_parent"
                     android:textColor="#372c24"
-                    android:text="Type d'appel"/>
+                    android:text="Type d'appel"
+                    android:visibility="gone"/>
                 <EditText
                     android:id="@+id/edittextcalltype"
                     android:layout_width="match_parent"
@@ -150,7 +151,8 @@
                     android:layout_marginLeft="@dimen/activity_horizontal_margin"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:singleLine="true"
-                    android:enabled="false"/>
+                    android:enabled="false"
+                    android:visibility="gone"/>
 
                 <TextView android:layout_width="fill_parent"
                     android:layout_height="match_parent"
