--- a/android-crmtab/app/src/main/res/layout/activity_visit.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_visit.xml
@@ -7,4 +7,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="fr.pds.isintheair.crmtab.mbalabascarin.uc.edit.crv.view.VisitActivity">
 
+
+
+    <ListView
+        android:id="@+id/listVisit"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:dividerHeight="0dp"
+        android:divider="@null">
+    </ListView>
 </RelativeLayout>
