--- a/android-crmtab/app/src/main/res/layout/visitlist_layout.xml
+++ b/android-crmtab/app/src/main/res/layout/visitlist_layout.xml
@@ -13,15 +13,10 @@
         card_view:cardCornerRadius="5dp"
 
         card_view:contentPadding="10dp">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtCount"
-            android:textStyle="bold"
-            android:textColor="#d4383a"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:textSize="30sp"/>
+       <ImageView
+           android:layout_width="100dp"
+           android:layout_height="100dp"
+           android:src="@drawable/agenda"/>
 
 
     </android.support.v7.widget.CardView>
