--- a/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_create_crv.xml
@@ -400,6 +400,20 @@
 
                                 </RadioGroup>
                             </LinearLayout>
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:gravity="center">
+
+                                <Button
+                                    android:id="@+id/btnDetail"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="Detail"
+                                    android:onClick="showSatisfactionDetail"/>
+                            </LinearLayout>
+
 
                         </LinearLayout>
                     </android.support.v7.widget.CardView>
