--- a/android-crmtab/app/src/main/res/layout/activity_visit.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_visit.xml
@@ -18,12 +18,18 @@
         card_view:cardCornerRadius="5dp"
         card_view:contentPadding="10dp">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="20sp"
-            android:text="Liste des visites"/>
+        <LinearLayout
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="20sp"
+                android:text="Liste des visites"/>
+
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
