--- a/android-crmtab/app/src/main/res/layout/activity_prospect.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_prospect.xml
@@ -10,23 +10,11 @@
         android:id="@+id/btn_prospect"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="findingProspect"
         android:padding="5dp"
         android:text="@string/btn_finding_prospect" />
 
-    <TableLayout
-        android:id="@+id/tl_prospect"
+    <ListView
+        android:id="@+id/lview_prospect"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TableRow
-            android:id="@+id/row_prospect"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView android:id="@+id/tv_prospect"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-        </TableRow>
-    </TableLayout>
+        android:layout_height="wrap_content"></ListView>
 </LinearLayout>
