--- a/android-crmtab/app/src/main/res/menu/main.xml
+++ b/android-crmtab/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="Se déconnecter"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/import_contact"
+        android:orderInCategory="100"
+        android:title="Importer des contacts"
+        app:showAsAction="never" />
 </menu>
