--- a/android-crmtab/app/src/main/res/layout/fragment_consult_prospect.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_consult_prospect.xml
@@ -5,10 +5,59 @@
     android:orientation="vertical"
     tools:context=".ctruong.uc.propsect.suggestion.view.activity.ConsultProspect">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_name"
+                />
+            <TextView android:id="@+id/tv_prospect_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_siret"
+                />
+            <TextView android:id="@+id/tv_prospect_siret"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_finess"
+                />
+            <TextView android:id="@+id/tv_prospect_finess"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_streetNumber"
+                />
+            <TextView android:id="@+id/tv_prospect_streetNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_streetName"
+                />
+            <TextView android:id="@+id/tv_prospect_streetName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+    </TableLayout>
 
 </LinearLayout>
