--- a/android-crmtab/app/src/main/res/layout/fragment_consult_prospect.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_consult_prospect.xml
@@ -58,6 +58,56 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_zipCode"
+                />
+            <TextView android:id="@+id/tv_prospect_zipcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_town"
+                />
+            <TextView android:id="@+id/tv_prospect_town"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_website"
+                />
+            <TextView android:id="@+id/tv_prospect_website"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_etablishmentType"
+                />
+            <TextView android:id="@+id/tv_prospect_etablishmentType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
+        <TableRow android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_turnover"
+                />
+            <TextView android:id="@+id/tv_prospect_turnover"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </TableRow>
     </TableLayout>
 
 </LinearLayout>
