--- a/android-crmtab/app/src/main/res/layout/fragment_spell_checker.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_spell_checker.xml
@@ -12,9 +12,9 @@
 
 
     <Button
+        android:id="@+id/btnCheck"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Check"
-        android:onClick="check"/>
+        android:text="Check"/>
 </LinearLayout>
