--- a/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,6 +30,10 @@
         <item
             android:id="@+id/nav_suggestion_prospect"
             android:icon="@drawable/ic_menu_manage"
+            android:title="Suggerer prospet"/>
+        <item
+            android:id="@+id/nav_normalize"
+            android:icon="@drawable/ic_menu_manage"
             android:title="Envoyer sms"/>
 
     </item>
