--- a/android-crmtab/app/src/main/res/layout/fragment_detail_indep.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_detail_indep.xml
@@ -291,6 +291,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:id="@+id/detail_indep_fragment_map_unavailable"
+                android:text="@string/display_hc_fragment_map_unavailable"
+                android:textSize="@dimen/detail_hc_size_text_text_view"
+                android:textColor="@android:color/holo_red_dark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
             <org.osmdroid.views.MapView android:id="@+id/detail_indep_fragment_map"
                 android:layout_marginTop="@dimen/detail_hc_margin_top"
                 android:layout_width="600dp"
