US85 : wi-agenda-mock TA431 : agenda added to menu, basic IHM is complete

--- a/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,12 @@
             android:id="@+id/nav_passer_appel"
             android:icon="@drawable/ic_menu_camera"
             android:title="Mes contacts"/>
+
+        <item
+            android:id="@+id/agenda"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="Mno agenda"/>
+
         <item
             android:id="@+id/nav_historiser_appel"
             android:icon="@drawable/ic_menu_camera"
