--- a/android-crmtab/app/src/main/res/layout/activity_detail_prospect.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_detail_prospect.xml
@@ -26,6 +26,7 @@
                 android:id="@+id/tv_prospect_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -44,6 +45,7 @@
                 android:id="@+id/tv_prospect_siret"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -62,6 +64,7 @@
                 android:id="@+id/tv_prospect_finess"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -80,6 +83,7 @@
                 android:id="@+id/tv_prospect_streetNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -98,6 +102,7 @@
                 android:id="@+id/tv_prospect_streetName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -116,6 +121,7 @@
                 android:id="@+id/tv_prospect_zipcode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -134,6 +140,7 @@
                 android:id="@+id/tv_prospect_town"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -152,6 +159,7 @@
                 android:id="@+id/tv_prospect_website"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -170,6 +178,26 @@
                 android:id="@+id/tv_prospect_etablishmentType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textSize="20dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/prospect_tv_bed"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/tv_prospect_bed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
 
@@ -188,6 +216,7 @@
                 android:id="@+id/tv_prospect_turnover"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
                 android:textSize="20dp" />
         </TableRow>
     </TableLayout>
@@ -199,9 +228,18 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btn_prospect_insert"
-            android:layout_width="match_parent"
+            android:id="@+id/btn_prospect_back"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="50dp"
+            android:onClick="backToActivity"
+            android:text="@string/prospect_bt_back" />
+
+        <Button
+            android:id="@+id/btn_prospect_insert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="insertNewClient"
             android:text="@string/prospect_bt_insert" />
     </LinearLayout>
 
