#US Create phoning campaign : added phoning campaign into the menu

--- a/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
@@ -41,6 +41,10 @@
             android:id="@+id/nav_normalize"
             android:icon="@drawable/ic_menu_manage"
             android:title="Normalize"/>
+        <item
+            android:id="@+id/nav_phoning_campaign"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Campagne de phoning"/>
 
     </item>
 
