#US Create phoning campaign : update main menu and init customer list view

--- a/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
+++ b/android-crmtab/app/src/main/res/menu/activity_main_drawer.xml
@@ -43,7 +43,7 @@
             android:title="Normalize"/>
         <item
             android:id="@+id/nav_phoning_campaign"
-            android:icon="@drawable/ic_menu_manage"
+            android:icon="@android:drawable/sym_action_call"
             android:title="Campagne de phoning"/>
 
     </item>
