--- a/android-crmtab/app/src/main/res/layout/fragment_main_logo.xml
+++ b/android-crmtab/app/src/main/res/layout/fragment_main_logo.xml
@@ -6,6 +6,14 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ImageView
+        android:id="@+id/imgStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/scanning" />
+
+
         <ImageView
             android:layout_width="250dp"
             android:layout_height="250dp"
