#update-pro-events: added activity to main page menu and commented 2 lines in ListennerCallEndedEvent.java and PopupFragment.java

--- a/android-crmtab/app/src/main/res/layout/activity_event_subscription.xml
+++ b/android-crmtab/app/src/main/res/layout/activity_event_subscription.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:padding="20dp"
     tools:context="fr.pds.isintheair.crmtab.view.activity.EventSubscriptionActivity">
 
     <com.facebook.login.widget.LoginButton
